sql-aoag-linked/childTemplates/networking.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "metadata": {
        "description": "Primary locaiton for the resources"
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "Virtual Network Name."
      }
    },
    "appGatewaySubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of application servers subnet."
      }
    },
    "appGatewaySubnetAddressPrefix": {
      "type": "string",
      "metadata": {
        "description": "Application Gateway subnet address space."
      }
    },
    "webFrontEndSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of web front end subnet."
      }
    },
    "webFrontEndSubnetAddressPrefix": {
      "type": "string",
      "metadata": {
        "description": "Web front end subnet address space."
      }
    },
    "appServerSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of app server subnet."
      }
    },
    "appServerSubnetAddresSpace": {
      "type": "string",
      "metadata": {
        "description": "App Server subnet address space."
      }
    },
    "sqlServerSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of SQL servers subnet."
      }
    },
    "sqlServerSubnetAddressSpace": {
      "type": "string",
      "metadata": {
        "description": "SQL servers subnet address space."
      }
    },
    "webFrontEndNsgName": {
      "type": "string",
      "metadata": {
        "description": "NSG for Web Front End Servers."
      }
    },
    "appServerNsgName": {
      "type": "string",
      "metadata": {
        "description": "NSG for Web Front End Servers."
      }
    },
    "sqlServerNsgName": {
      "type": "string",
      "metadata": {
        "description": "NSG for Web Front End Servers."
      }
    },
    "tags": {
      "type": "object"
    }
  },
  "variables": {
  },
  "resources": [
    {
      "name": "[concat(parameters('virtualNetworkName'), '/', parameters('appGatewaySubnetName'))]",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2020-11-01",
      "dependsOn": [
      ],
      "properties": {
        "addressPrefix": "[parameters('appGatewaySubnetAddressPrefix')]"
      }
    },
    {
      "name": "[concat(parameters('virtualNetworkName'), '/', parameters('appServerSubnetName'))]",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2020-11-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('appGatewaySubnetName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('appServerNsgName'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('appServerSubnetAddresSpace')]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('appServerNsgName'))]"
        },
        "serviceEndpoints": [
          {
            "service": "Microsoft.KeyVault",
            "locations": [
                "*"
            ]
          }
        ]
      }
    },
    {
      "name": "[concat(parameters('virtualNetworkName'), '/', parameters('sqlServerSubnetName'))]",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2020-11-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('appGatewaySubnetName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('appServerSubnetName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('sqlServerNsgName'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('sqlServerSubnetAddressSpace')]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('sqlServerNsgName'))]"
        },
        "serviceEndpoints": [
          {
            "service": "Microsoft.KeyVault",
            "locations": [
                "*"
            ]
          }
        ]
      }
    },
    {
      "name": "[concat(parameters('virtualNetworkName'), '/', parameters('webFrontEndSubnetName'))]",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2020-11-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('appGatewaySubnetName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('appServerSubnetName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('sqlServerSubnetName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('webFrontEndNsgName'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('webFrontEndSubnetAddressPrefix')]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('webFrontEndNsgName'))]"
        },
        "serviceEndpoints": [
          {
            "service": "Microsoft.KeyVault",
            "locations": [
                "*"
            ]
          }
        ]
      }
    },
    {
      "name": "[parameters('webFrontEndNsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "comments": "Network Security Group (NSG) for your web front end server subnet",
      "properties": {
        "securityRules": [
          {
            "name": "allow-ingress-onprem-any",
            "properties": {
              "priority": 200,
              "sourceAddressPrefixes": [
                 "10.1.2.0/24",
                 "10.1.4.0/24",
                 "172.16.3.0/24",
                 "172.16.2.0/24",
                 "192.168.100.0/30",
                 "10.1.19.0/24",
                 "10.1.18.0/24"
              ],
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "3389",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-https",
            "properties": {
              "priority": 1001,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "443",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-http",
            "properties": {
              "priority": 1002,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "80",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-egress-dc-any",
            "properties": {
              "priority": 102,
              "sourceAddressPrefix": "[parameters('appServerSubnetAddresSpace')]",
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "10.10.4.0/28"
            }
          },
          {
            "name": "allow-egress-onprem-any",
            "properties": {
              "priority": 200,
              "sourceAddressPrefix": "[parameters('appServerSubnetAddresSpace')]",
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourcePortRange": "*",
              "destinationAddressPrefixes": [
                "10.1.2.0/24",
                "10.1.4.0/24",
                "172.16.3.0/24",
                "172.16.2.0/24",
                "192.168.100.0/30",
                "10.1.19.0/24",
                "10.1.18.0/24"
              ]
            }
          }
        ]
      }
    },
    {
      "name": "[parameters('appServerNsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "comments": "Network Security Group (NSG) for your application server subnet",
      "properties": {
        "securityRules": [
          {
            "name": "allow-ingress-onprem-any",
            "properties": {
              "priority": 200,
              "sourceAddressPrefixes": [
                 "10.1.2.0/24",
                 "10.1.4.0/24",
                 "172.16.3.0/24",
                 "172.16.2.0/24",
                 "192.168.100.0/30",
                 "10.1.19.0/24",
                 "10.1.18.0/24"
              ],
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "3389",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-web-front-end",
            "properties": {
              "priority": 1001,
              "sourceAddressPrefix": "[parameters('webFrontEndSubnetAddressPrefix')]",
              "protocol": "Tcp",
              "destinationPortRange": "443",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-egress-dc-any",
            "properties": {
              "priority": 102,
              "sourceAddressPrefix": "[parameters('appServerSubnetAddresSpace')]",
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "10.10.4.0/28"
            }
          },
          {
            "name": "allow-egress-onprem-any",
            "properties": {
              "priority": 200,
              "sourceAddressPrefix": "[parameters('appServerSubnetAddresSpace')]",
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourcePortRange": "*",
              "destinationAddressPrefixes": [
                "10.1.2.0/24",
                "10.1.4.0/24",
                "172.16.3.0/24",
                "172.16.2.0/24",
                "192.168.100.0/30",
                "10.1.19.0/24",
                "10.1.18.0/24"
              ]
            }
          }
        ]
      }
    },
    {
      "name": "[parameters('sqlServerNsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "comments": "Network Security Group (NSG) for your DB server subnet",
      "properties": {
        "securityRules": [
          {
            "name": "allow-ingress-onprem-any",
            "properties": {
              "priority": 200,
              "sourceAddressPrefixes": [
                 "10.1.2.0/24",
                 "10.1.4.0/24",
                 "172.16.3.0/24",
                 "172.16.2.0/24",
                 "192.168.100.0/30",
                 "10.1.19.0/24",
                 "10.1.18.0/24"
              ],
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "3389",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-app-server",
            "properties": {
              "priority": 1001,
              "sourceAddressPrefix": "[parameters('appServerSubnetAddresSpace')]",
              "protocol": "Tcp",
              "destinationPortRange": "1433",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-egress-dc-any",
            "properties": {
              "priority": 102,
              "sourceAddressPrefix": "[parameters('appServerSubnetAddresSpace')]",
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "10.10.4.0/28"
            }
          },
          {
            "name": "allow-egress-onprem-any",
            "properties": {
              "priority": 200,
              "sourceAddressPrefix": "[parameters('appServerSubnetAddresSpace')]",
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourcePortRange": "*",
              "destinationAddressPrefixes": [
                "10.1.2.0/24",
                "10.1.4.0/24",
                "172.16.3.0/24",
                "172.16.2.0/24",
                "192.168.100.0/30",
                "10.1.19.0/24",
                "10.1.18.0/24"
              ]
            }
          }
        ]
      }
    }
  ],
  "outputs": {
  }
}
